update: minor changes (makefile, template.tex, test.tex)

--- a/template.tex
+++ b/template.tex
@@ -8,6 +8,7 @@
 \usepackage{amssymb}
 \usepackage{xspace}
 \usepackage{proof}
+\usepackage{pgfplots}
 \usetikzlibrary{arrows}
 \usetikzlibrary{chains}
 \usetikzlibrary{matrix}
