--- a/test.tex
+++ b/test.tex
@@ -25,21 +25,14 @@ This page empty
    \node [rectangle] at (-1,6.5) {};
    \node [anchor=west] at (-1,4) {\includegraphics[height=4cm]{./incline-dumbbell-fly.png}};
    \node [anchor=west] at (-1,6) {\textsf{\Large Incline dumbbell fly}};
-   \node at (-0.7, 1.75) {\tiny\textsf{notes}};
-   \node at (-0.5,1.75) [anchor=west, text width=10cm, inner sep=0pt, align=left] {
-           \begin{minipage}{0.50\textwidth}
-                   \tiny
-weight is the weight of a single dumbbell 
-           \end{minipage}
-   };
 
-    \node at (-0.7,1.25)  {\tiny\textsf{mnt}};
-    \node at (-0.7,0.75)  {\tiny\textsf{day}};
-    \node at (-0.7,0.25)  {\tiny\textsf{wu}};
-    \node at (-0.7,-0.25) {\tiny\textsf{r1}};
-    \node at (-0.7,-0.75) {\tiny\textsf{r2}};
-    \node at (-0.7,-1.25) {\tiny\textsf{r3}};
-    \node at (-0.7,-1.75) {\tiny\textsf{r4}};
+   \node at  (-0.5,1.25)  [anchor=east]{\tiny\textsf{mnt}};
+   \node at  (-0.5,0.75)  [anchor=east]{\tiny\textsf{day}};
+    \node at (-0.5,0.25)  [anchor=east]{\tiny\textsf{wu}};
+    \node at (-0.5,-0.25) [anchor=east]{\tiny\textsf{r1}};
+    \node at (-0.5,-0.75) [anchor=east]{\tiny\textsf{r2}};
+    \node at (-0.5,-1.25) [anchor=east]{\tiny\textsf{r3}};
+    \node at (-0.5,-1.75) [anchor=east]{\tiny\textsf{r4}};
 
     \foreach \x in {1,...,2} {
     \foreach \y in {0,...,17} {
@@ -114,17 +107,24 @@ weight is the weight of a single dumbbell
    ]
    
    \node [rectangle] at (-1,6.5) {};
-   % \node [anchor=west] at (-1,4) {\includegraphics[height=4cm]{./incline-dumbbell-fly.png}};
-   % \node [anchor=west] at (-1,6) {\textsf{\Large Incline dumbbell fly}};
-   % \node at (-0.7, 1.75) {\tiny\textsf{notes}};
 
-    \node at (-0.7,1.25)  {\tiny\textsf{mnt}};
-    \node at (-0.7,0.75)  {\tiny\textsf{day}};
-    \node at (-0.7,0.25)  {\tiny\textsf{wu}};
-    \node at (-0.7,-0.25) {\tiny\textsf{r1}};
-    \node at (-0.7,-0.75) {\tiny\textsf{r2}};
-    \node at (-0.7,-1.25) {\tiny\textsf{r3}};
-    \node at (-0.7,-1.75) {\tiny\textsf{r4}};
+   \node at (-0.5, 5) [anchor=east] {\tiny\textsf{notes}};
+   \node at (-0.5, 5) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \begin{minipage}{0.50\textwidth} \tiny weight is the weight of a single dumbbell \end{minipage} };
+
+
+   \node at (-0.5, 6) [anchor=east] {\tiny\textsf{Sugg. Rmin}};
+   \node at (-0.5, 6) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \tiny 10 };
+
+   \node at (-0.5, 5.5) [anchor=east] {\tiny\textsf{Sugg. Rmax}};
+   \node at (-0.5, 5.5) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \tiny 20 };
+
+   \node at (-0.5,1.25)  [anchor=east] {\tiny\textsf{mnt}};
+   \node at (-0.5,0.75)  [anchor=east] {\tiny\textsf{day}};
+   \node at (-0.5,0.25)  [anchor=east] {\tiny\textsf{wu}};
+   \node at (-0.5,-0.25) [anchor=east] {\tiny\textsf{r1}};
+   \node at (-0.5,-0.75) [anchor=east] {\tiny\textsf{r2}};
+   \node at (-0.5,-1.25) [anchor=east] {\tiny\textsf{r3}};
+   \node at (-0.5,-1.75) [anchor=east] {\tiny\textsf{r4}};
 
     \foreach \x in {1,...,2} {
     \foreach \y in {0,...,17} {
