update: minor changes (template.tex, test.tex)

--- a/template.tex
+++ b/template.tex
@@ -21,9 +21,12 @@
 \usetikzlibrary{circuits.logic.US}
 \usepackage{fontspec}
 \usepackage[a6paper, margin=0.3cm]{geometry}
+\usepackage[eulergreek]{sansmath}
+
 \setmainfont[]{Helvetica Neue}
 \setmonofont[Contextuals={Alternate}, Scale=MatchLowercase]{Fira Code}
 \setsansfont[]{Bebas Neue}
+\title{Workout notebook}
 <%= include %>
 \begin{document}
 <%= tikzcode %>
