--- a/test.tex
+++ b/test.tex
@@ -1,9 +1,10 @@
  
-\pagestyle{empty}
 \setlength{\parindent}{0cm}
 \newpage
-This page empty
+\maketitle
 \newpage
+\pgfplotsset{every tick label/.append style={font=\tiny\sffamily}} 
+
 
 \begin{tikzpicture}[
     triangle/.style = {regular polygon, 
@@ -48,6 +49,9 @@ This page empty
     }
     }
 
+   \node at  (4,-2.35)  {\footnotesize\textsf{MAX}};
+   \node at  (4,-4.85)  {\footnotesize\textsf{1RM}};
+
   \begin{axis}[
           every axis/.append style={font=\tiny},
           grid style={gray!20},
@@ -63,7 +67,6 @@ This page empty
           xticklabel=\empty,
           minor x tick num=1,
           minor y tick num=4,
-          axis lines = middle,
           at={(-.5cm,-4.5cm)},
           ]
   \end{axis}
@@ -83,7 +86,6 @@ This page empty
           xticklabel=\empty,
           minor x tick num=1,
           minor y tick num=4,
-          axis lines = middle,
           at={(-.5cm,-7cm)},
           ]
    \end{axis}
@@ -108,15 +110,16 @@ This page empty
    
    \node [rectangle] at (-1,6.5) {};
 
-   \node at (-0.5, 5) [anchor=east] {\tiny\textsf{notes}};
-   \node at (-0.5, 5) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \begin{minipage}{0.50\textwidth} \tiny weight is the weight of a single dumbbell \end{minipage} };
-
-
-   \node at (-0.5, 6) [anchor=east] {\tiny\textsf{Sugg. Rmin}};
+   \node at (-0.5, 6) [anchor=east] {\tiny\textsf{SRmin}};
    \node at (-0.5, 6) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \tiny 10 };
 
-   \node at (-0.5, 5.5) [anchor=east] {\tiny\textsf{Sugg. Rmax}};
-   \node at (-0.5, 5.5) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \tiny 20 };
+   \node at (-0.5, 5.7) [anchor=east] {\tiny\textsf{SRmax}};
+   \node at (-0.5, 5.7) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \tiny 20 };
+
+   \node at (-0.5, 5.4) [anchor=east] {\tiny\textsf{notes}};
+   \node at (-0.5, 5.4) [anchor=west, text width=10cm, inner sep=0pt, align=left] { \begin{minipage}{0.50\textwidth} \tiny weight is the weight of a single dumbbell \end{minipage} };
+
+
 
    \node at (-0.5,1.25)  [anchor=east] {\tiny\textsf{mnt}};
    \node at (-0.5,0.75)  [anchor=east] {\tiny\textsf{day}};
@@ -155,7 +158,6 @@ This page empty
           xticklabel=\empty,
           minor x tick num=1,
           minor y tick num=4,
-          axis lines = middle,
           at={(-.5cm,-4.5cm)},
           ]
   \end{axis}
@@ -175,7 +177,6 @@ This page empty
           xticklabel=\empty,
           minor x tick num=1,
           minor y tick num=4,
-          axis lines = middle,
           at={(-.5cm,-7cm)},
           ]
    \end{axis}
